[gd_scene load_steps=5 format=3 uid="uid://dyajjk3nfvsni"]

[ext_resource type="Script" uid="uid://cutr310cg2fft" path="res://Scenes/InteractWindows/Wall2/PaintingInput.gd" id="1_j40kp"]
[ext_resource type="Texture2D" uid="uid://cqf1vmqlkcjxx" path="res://Assets/wall_2/digit_sign.png" id="2_6syb5"]
[ext_resource type="LabelSettings" uid="uid://3wwuas2vl54n" path="res://Resources/50black.tres" id="3_4gy8e"]
[ext_resource type="PackedScene" uid="uid://dlkk2hkysmf56" path="res://Scenes/Button/ArrowButton.tscn" id="4_7fo76"]

[node name="PaintingInput" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_j40kp")

[node name="Input" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = 353.0
offset_right = 42.0
offset_bottom = 406.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(41.5, 0)
texture = ExtResource("2_6syb5")

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = 483.0
offset_top = 905.0
offset_right = 604.0
offset_bottom = 982.0
text = "0"
label_settings = ExtResource("3_4gy8e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ArrowButtonLeft" parent="." instance=ExtResource("4_7fo76")]
layout_mode = 0
offset_left = 132.99998
offset_top = 696.0
offset_right = 633.0
offset_bottom = 1196.0

[node name="ArrowButtonRight" parent="." instance=ExtResource("4_7fo76")]
layout_mode = 0
offset_left = 447.99997
offset_top = 696.0
offset_right = 948.0
offset_bottom = 1196.0
flip_h = true

[connection signal="pressed" from="ArrowButtonLeft" to="." method="_on_arrow_button_left_pressed"]
[connection signal="pressed" from="ArrowButtonRight" to="." method="_on_arrow_button_right_pressed"]
